# jubako

./: README.md
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs  test_window.rs
jubako/: Cargo.toml
jubako/assets/: index.html  package-lock.json  package.json  vite.config.ts
jubako/assets/src/: applyCommand.ts  applyEvent.ts  connection.ts  eventToPayload.ts  main.ts  rustTypes.ts
jubako/src/: lib.rs  server.rs  vnode.rs  window.rs
jubako/src/vnode/: command.rs  event.rs  event_list.rs  processor.rs  vnode.rs
jubako/src/vnode/vnode/: message_handled_vnode.rs  portal_expanded_vnode.rs  rendered_vnode.rs  style_extracted_vnode.rs
jubako/src/window/: simple_window.rs
